--- a/index.html
+++ b/index.html
@@ -302,12 +302,30 @@
           <div class="col-md-12" style="display: inline-flex;">
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <img class="card-img-top img-fluid gallery-img" src="images/garden-of-gods-3.jpg" alt="Card image cap">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/garden-of-gods-3.jpg" alt="Card image cap">
+                </figure>
+                </div>
+            </div>
+            <div class="col-md-6" style="display: inline;">
+              <div class="card" style="width: 100%; height: auto;">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/via-lactea.jpg" alt="Card image cap">
+                </figure>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12" style="display: inline-flex;">
+            <div class="col-md-6" style="display: inline;">
+              <div class="card" style="width: 100%; height: auto;">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/itatiaia.jpg" alt="Card image cap">
+                </figure>
               </div>
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <img class="card-img-top img-fluid gallery-img" src="images/via-lactea.jpg" alt="Card image cap">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/cerrado-wildflowers.jpg" alt="Card image cap">
+                </figure>
               </div>
             </div>
           </div>
@@ -316,12 +334,14 @@
           <div class="col-md-12" style="display: inline-flex;">
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <img class="card-img-top img-fluid gallery-img" src="images/itatiaia.jpg" alt="Card image cap">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/mata-atlantica.jpg" alt="Card image cap">
+                </figure> 
               </div>
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <img class="card-img-top img-fluid gallery-img" src="images/cerrado-wildflowers.jpg" alt="Card image cap">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/mata-atlantica-2.jpg" alt="Card image cap">
+              </figure>
               </div>
             </div>
           </div>
@@ -330,12 +350,14 @@
           <div class="col-md-12" style="display: inline-flex;">
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <img class="card-img-top img-fluid gallery-img" src="images/mata-atlantica.jpg" alt="Card image cap">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/bromelia.jpg" alt="Card image cap">
+                </figure>
               </div>
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <img class="card-img-top img-fluid gallery-img" src="images/mata-atlantica-2.jpg" alt="Card image cap">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/cerrado-tucanos.jpg" alt="Card image cap">
+                </figure>
               </div>
             </div>
           </div>
