--- a/index.html
+++ b/index.html
@@ -82,12 +82,15 @@
                 <img class="img-fluid about-me-card-img" src="images/eu-mata-atlantica.jpg" alt="Card image cap">
               </div>-->
               <div class="card-body">
-                <p>I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
-                bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python,
-                and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
+                <p>I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
+                At the moment I am pursuing my PhD degree, having my research focused on genomics and
+                bioinformatics for an evolutionary biology approach. 
+                
+                For research purposes, I have had training in both R and Python, and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
                 version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
-                de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with
-                many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.</p>
+                de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. 
+                
+                In addition, I have skills with many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.</p>
               </div>
             </div>
           </div>
@@ -356,7 +359,7 @@
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/cerrado-tucanos.jpg" alt="Card image cap">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/gore-range.jpg" alt="Card image cap">
                 </figure>
               </div>
             </div>
