--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
 
     <div class="h4 text-center mb-4 title">Research Projects</div>
     <div class="row">
-      <div class="col-md-12" style="display: inline-flex;">
+      <!--<div class="col-md-12" style="display: inline-flex;">-->
+        <div class="col-md-12">
         <div class="col-md-3" style="display: inline;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="card" style="width: 100%; height: auto;">
             <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
@@ -359,7 +360,7 @@
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/gore-range.jpg" alt="Card image cap">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/garden-of-gods-3.jpg" alt="Card image cap">
                 </figure>
               </div>
             </div>
