--- a/index.html
+++ b/index.html
@@ -81,16 +81,17 @@
               <div class="about-me-card-img">
                 <img class="img-fluid about-me-card-img" src="images/eu-mata-atlantica.jpg" alt="Card image cap">
               </div>-->
-              <div class="card-body">
-                <p>I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
+              <div class="card-body" style="text-align: justify;">
+                <p class="card-text">I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
                 At the moment I am pursuing my PhD degree, having my research focused on genomics and
-                bioinformatics for an evolutionary biology approach. 
-                
+                bioinformatics for an evolutionary biology approach. </p>
+                <p class="card-text">
                 For research purposes, I have had training in both R and Python, and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
                 version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
                 de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. 
-                
-                In addition, I have skills with many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.</p>
+                </p>
+                <p class="card-text"> addition, I have skills with many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.
+                </p>
               </div>
             </div>
           </div>
@@ -360,7 +361,7 @@
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/garden-of-gods-3.jpg" alt="Card image cap">
+                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/garden-of-gods-2.jpg" alt="Card image cap">
                 </figure>
               </div>
             </div>
