--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <div class="h2 title">Jacqueline Salvi de Mattos</div>
           <p></p>
           <p class="category text-white">Evolutionary Biologist | Bioinformatician</p>
-          <p class="category text-white">PhD Student at University of Campinas/Brazil</p>
-          <p class="category text-white">Visiting Researcher at University of Colorado Boulder/USA</p>
+          <p class="category text-white">PhD Student at University of Campinas (Brazil)</p>
+          <p class="category text-white">Visiting Researcher at University of Colorado Boulder (USA)</p>
           <!--<a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
         </div>
       </div>
@@ -76,12 +76,12 @@
       <div class="row">
         <div class="col-lg-12 col-md-12" data-aos="fade-up" data-aos-offset="10">
           <div class="card">
-            <!--
-            <div class="card-horizontal">
-              <div class="about-me-card-img">
+            
+            <div class="card-horizontal" style="display: inline-flex;">
+              <div class="about-me-card-img" style="display: inline;">
                 <img class="img-fluid about-me-card-img" src="images/eu-mata-atlantica.jpg" alt="Card image cap">
-              </div>-->
-              <div class="card-body" style="text-align: justify;">
+              </div>
+              <div class="card-body" style="text-align: justify; display: inline;">
                 <p class="texto-about">I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
                 At the moment I am pursuing my PhD degree, having my research focused on genomics and bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python, and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
                 version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
