--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <div class="col-lg-12 col-md-12" data-aos="fade-up" data-aos-offset="10">
           <div class="card">
             
-            <div class="card-horizontal" style="display: inline-flex;">
-              <div class="about-me-card-img" style="display: inline;">
-                <img class="img-fluid about-me-card-img" src="images/eu-mata-atlantica.jpg" alt="Card image cap">
+            <div class="card-horizontal">
+              <div class="about-me-card-img">
+                <img class="img-fluid about-me-card-img" src="images/talk-colorado-native-plant-society.jpeg" alt="Card image cap">
               </div>
               <div class="card-body" style="text-align: justify; display: inline;">
                 <p class="texto-about">I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
