--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                 <img class="img-fluid about-me-card-img" src="images/talk-colorado-native-plant-society.jpeg" alt="Card image cap">
               </div>
               <div class="card-body" style="text-align: justify; display: inline;">
-                <p class="texto-about">I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
+                <div class="texto-about">I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
                 At the moment I am pursuing my PhD degree, having my research focused on genomics and bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python, and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
                 version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
                 de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.
-                </p>
+                </div>
               </div>
             </div>
           </div>
