--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('images/mata-atlantica.jpg')"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('images/cerrado-wildflowers.jpg')"></div>
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/profile-2022.jpeg" alt="Image"/></a></div>
@@ -76,7 +76,6 @@
       <div class="row">
         <div class="col-lg-12 col-md-12" data-aos="fade-up" data-aos-offset="10">
           <div class="card">
-            
             <div class="card-horizontal">
               <div class="about-me-card-img">
                 <img class="img-fluid about-me-card-img imagem-com-card" src="images/talk-colorado-native-plant-society.jpeg" alt="Card image cap">
