--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="row">
       <!--<div class="col-md-12" style="display: inline-flex;">-->
         <div class="col-md-12">
-        <div class="col-md-3" style="display: inline;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="col-md-3" style="display: inline;">
           <div class="card" style="width: 100%; height: auto;">
             <img class="card-img-top" src="images/DSC_0023.JPG" alt="Card image cap">
             <div class="card-body">
@@ -175,7 +175,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3" style="display: inline;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="col-md-3" style="display: inline;">
             <div class="card" style="width: 100%; height: auto;">
               <img class="card-img-top" src="images/assembly.png" alt="Card image cap">
               <div class="card-body">
@@ -185,7 +185,7 @@
               </div>
             </div>
         </div>
-        <div class="col-md-3" style="display: inline;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="col-md-3" style="display: inline;">
           <div class="card" style="width: 100%; height: auto;">
             <img class="card-img-top" src="images/Epidendrum-tree-draft.PNG" alt="Card image cap">
             <div class="card-body">
@@ -195,7 +195,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3" style="display: inline;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="col-md-3" style="display: inline;">
           <div class="card" style="width: 100%; height: auto;" >
             <img class="card-img-top" src="images/floripa_2.jpg" alt="Card image cap">
             <div class="card-body">
