--- a/index.html
+++ b/index.html
@@ -155,6 +155,58 @@
   </div>
 </div>
 
+<div class="section" id="publications">
+  <div class="container cc-education">
+    <div class="h4 text-center mb-4 title">Publications</div>
+
+    <div class="h5 mb-4 title">2017</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Biological Reviews</div>
+            <p>GALETTI, MAURO ; MOLEÓN, MARCOS ; JORDANO, PEDRO ; PIRES, MATHIAS M.; GUIMARÃES, PAULO R. ; PAPE, THOMAS
+              ; NICHOLS,
+              ELIZABETH ; HANSEN, DENNIS; OLESEN, JENS, M.; MUNK, MICHAEL ; DE MATTOS, JACQUELINE S. ; SCHWEIGER,
+              ANDREAS H.;
+              OWEN-SMITH, NORMAN ; JOHNSON, CHRISTOPHER N.; MARQUIS, ROBERT J.;SVENNING, JENS-CHRISTIAN. 2018.Ecological
+              and
+              evolutionary legacy of megafauna extinctions. Biological Reviews, vol. 93, issue 2. DOI:
+              HTTPS://DOI.ORG/10.1111/BRV.12374</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="h5 mb-4 title">2019</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Plant Ecology</div>
+            <p>MATTOS, J.S., MORELLATO, L.P.C., CAMARGO, M.G.G., BATALHA, M.A. 2019. Plant phylogenetic diversity of
+              tropical
+              mountaintop rocky grasslands: local and regional constraints. Plant Ecology. DOI:
+              HTTPS://DOI.ORG/10.1007/S11258-019-00982-5</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="h5 mb-4 title">2021</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Botanical Journal of the Linnean Society</div>
+            <p>MATTOS, J.S., MORELLATO, L.P.C., BATALHA, M.A. 2021. Plant communities in tropical ancient mountains: how
+              are they
+              spatially and evolutionary structured? Botanical Journal of the Linnean Society. January 2021.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="section" id="research">
   <div class="container">
 
@@ -207,53 +259,6 @@
         </div>
       </div>
     </div>  
-  </div>
-</div>
-
-<div class="section" id="publications">
-  <div class="container cc-education">
-    <div class="h4 text-center mb-4 title">Publications</div>
-
-    <div class="h5 mb-4 title">2017</div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Biological Reviews</div>
-            <p>GALETTI, MAURO ; MOLEÓN, MARCOS ; JORDANO, PEDRO ; PIRES, MATHIAS M.; GUIMARÃES, PAULO R. ; PAPE, THOMAS ; NICHOLS,
-            ELIZABETH ; HANSEN, DENNIS; OLESEN, JENS, M.; MUNK, MICHAEL ; DE MATTOS, JACQUELINE S. ; SCHWEIGER, ANDREAS H.;
-            OWEN-SMITH, NORMAN ; JOHNSON, CHRISTOPHER N.; MARQUIS, ROBERT J.;SVENNING, JENS-CHRISTIAN. 2018.Ecological and
-            evolutionary legacy of megafauna extinctions. Biological Reviews, vol. 93, issue 2. DOI:
-            HTTPS://DOI.ORG/10.1111/BRV.12374</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="h5 mb-4 title">2019</div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Plant Ecology</div>
-            <p>MATTOS, J.S., MORELLATO, L.P.C., CAMARGO, M.G.G., BATALHA, M.A. 2019. Plant phylogenetic diversity of tropical
-            mountaintop rocky grasslands: local and regional constraints. Plant Ecology. DOI:
-            HTTPS://DOI.ORG/10.1007/S11258-019-00982-5</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="h5 mb-4 title">2021</div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Botanical Journal of the Linnean Society</div>
-            <p>MATTOS, J.S., MORELLATO, L.P.C., BATALHA, M.A. 2021. Plant communities in tropical ancient mountains: how are they
-            spatially and evolutionary structured? Botanical Journal of the Linnean Society. January 2021.</p>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 
