--- a/index.html
+++ b/index.html
@@ -306,14 +306,12 @@
           <div class="col-md-12" style="display: inline-flex;">
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/garden-of-gods-3.jpg" alt="Card image cap">
-                </figure>
+                <img class="card-img-top img-fluid gallery-img" src="images/garden-of-gods-3.jpg" alt="Card image cap">
                 </div>
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/via-lactea.jpg" alt="Card image cap">
-                </figure>
+                <img class="card-img-top img-fluid gallery-img" src="images/via-lactea.jpg" alt="Card image cap">
                 </div>
             </div>
           </div>
@@ -322,30 +320,12 @@
           <div class="col-md-12" style="display: inline-flex;">
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/itatiaia.jpg" alt="Card image cap">
-                </figure>
+                <img class="card-img-top img-fluid gallery-img" src="images/itatiaia.jpg" alt="Card image cap">
               </div>
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/cerrado-wildflowers.jpg" alt="Card image cap">
-                </figure>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12" style="display: inline-flex;">
-            <div class="col-md-6" style="display: inline;">
-              <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/mata-atlantica.jpg" alt="Card image cap">
-                </figure> 
-              </div>
-            </div>
-            <div class="col-md-6" style="display: inline;">
-              <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/mata-atlantica-2.jpg" alt="Card image cap">
-              </figure>
+                <img class="card-img-top img-fluid gallery-img" src="images/cerrado-wildflowers.jpg" alt="Card image cap">
               </div>
             </div>
           </div>
@@ -354,14 +334,26 @@
           <div class="col-md-12" style="display: inline-flex;">
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/bromelia.jpg" alt="Card image cap">
-                </figure>
+                <img class="card-img-top img-fluid gallery-img" src="images/mata-atlantica.jpg" alt="Card image cap">
               </div>
             </div>
             <div class="col-md-6" style="display: inline;">
               <div class="card" style="width: 100%; height: auto;">
-                <figure class="cc-effect"><img class="card-img-top img-fluid gallery-img" src="images/garden-of-gods-2.jpg" alt="Card image cap">
-                </figure>
+                <img class="card-img-top img-fluid gallery-img" src="images/mata-atlantica-2.jpg" alt="Card image cap">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12" style="display: inline-flex;">
+            <div class="col-md-6" style="display: inline;">
+              <div class="card" style="width: 100%; height: auto;">
+                <img class="card-img-top img-fluid gallery-img" src="images/bromelia.jpg" alt="Card image cap">
+              </div>
+            </div>
+            <div class="col-md-6" style="display: inline;">
+              <div class="card" style="width: 100%; height: auto;">
+                <img class="card-img-top img-fluid gallery-img" src="images/garden-of-gods-2.jpg" alt="Card image cap">
               </div>
             </div>
           </div>
