--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('images/via-lactea-2.jpg'); width: 100%; min-height: 100%;"></div>
+      <div class="page-header-image" data-parallax="true" 
+          style="background-image: url('images/mata-atlantica-2.jpg'); width: 100%; min-height: 100%; background-size: 100% 100%;"></div>
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/profile-2022.jpeg" alt="Image"/></a></div>
