--- a/index.html
+++ b/index.html
@@ -97,6 +97,34 @@
   </div>
 </div>
 
+<div class="section" id="research">
+  <div class="container">
+    <div class="h4 text-center mb-4 title">Research Interests</div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 col-md-12" data-aos="fade-up" data-aos-offset="10">
+          <div class="card">
+            <div class="card-horizontal">
+              <div class="about-me-card-img">
+                <img class="img-fluid about-me-card-img imagem-com-card" src="images/talk-colorado-native-plant-society.jpeg" alt="Card image cap">
+              </div>
+              <div class="card-body imagem-com-card" style="text-align: justify; display: inline;">
+                <p>I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
+                At the moment I am pursuing my PhD degree, having my research focused on genomics and bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python, and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
+                version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
+                de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 
 <div class="section" id="skill">
   <div class="container">
@@ -208,7 +236,7 @@
   </div>
 </div>
 
-<div class="section" id="research">
+<div class="section" id="research_projects">
   <div class="container">
 
     <div class="h4 text-center mb-4 title">Research Projects</div>
