--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
                   <div class="card">
                     <div class="card-horizontal">
                       <div class="about-me-card-img">
-                        <img class="img-fluid about-me-card-img imagem-com-card" src="images/cerrado.jpg"
+                        <img class="img-fluid about-me-card-img imagem-com-card" src="images/mata-atlantica.jpg"
                           alt="Card image cap">
                       </div>
                       <div class="card-body imagem-com-card" style="text-align: justify; display: inline;">
-                        <p>I am mainly interested in using high innovative tools and technologies in the study of
-                          biological diversity and evolutionary processes, focusing on the plantae and fungi kingdoms.
+                        <p>I am mainly interested in using highly innovative tools and technologies in the study of
+                          biological diversity and evolutionary processes, focusing on the Plantae and Fungi kingdoms.
                           My main passion today is using bioinformatics in the study of genomic and transcriptomic data,
                           but I am also interested in developing new software for the investigation of biological
                           systems.
