--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
             <div class="page-header-image" data-parallax="true"
-              style="background-image: url('images/via-lactea.jpg'); width: 100%; min-height: 100%;"></div>
+              style="background-image: url('images/via-lactea.jpg'); width: 100%; min-height: 100%; background-size: 100% 100%;">
+            </div>
             <div class="container">
               <div class="content-center">
                 <div class="cc-profile-image"><a href="#"><img src="images/profile-2022.jpeg" alt="Image" /></a></div>
