--- a/index.html
+++ b/index.html
@@ -452,10 +452,7 @@
 
           </div>
         </div>
-
-
-
-
+        <!--
         <div class="section" id="contact">
           <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
             <div class="container">
@@ -533,24 +530,27 @@
         </div>
       </div>
     </div>
-    <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x "
-            aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x "
-            aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i
-            class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i
-            class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
-      <div class="text-center text-muted">
-        <p>Jacqueline Mattos</p>
-        <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com"
-            target="_blank">TemplateFlip</a></p>
-      </div>
-    </footer>
-    <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
-    <script src="js/core/popper.min.js?ver=1.1.0"></script>
-    <script src="js/core/bootstrap.min.js?ver=1.1.0"></script>
-    <script src="js/now-ui-kit.js?ver=1.1.0"></script>
-    <script src="js/aos.js?ver=1.1.0"></script>
-    <script src="scripts/main.js?ver=1.1.0"></script>
+
+  -->
+        <footer class="footer">
+          <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i
+                class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i
+                class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link"
+              href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a
+              class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a>
+          </div>
+          <div class="text-center text-muted">
+            <p>Jacqueline Mattos</p>
+            <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com"
+                target="_blank">TemplateFlip</a></p>
+          </div>
+        </footer>
+        <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
+        <script src="js/core/popper.min.js?ver=1.1.0"></script>
+        <script src="js/core/bootstrap.min.js?ver=1.1.0"></script>
+        <script src="js/now-ui-kit.js?ver=1.1.0"></script>
+        <script src="js/aos.js?ver=1.1.0"></script>
+        <script src="scripts/main.js?ver=1.1.0"></script>
 </body>
 
 </html>
