--- a/index.html
+++ b/index.html
@@ -78,6 +78,35 @@
             </div>
           </div>
         </div>
+        <header>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="image-header text-center">
+                  <img class="img-fluid" src="images/profile-2022.jpeg" alt="image">
+                  <div class="icons-head">
+                    <a href="" target="_blank"><i class="fab fa-researchgate icon-style"></i></a>
+                    <a href="" target="_blank"><i class="fab fa-github icon-style"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="text-header">
+                  <h1>
+                    <span class="color-name">Jacqueline Mattos</span><br><br>
+                    <span class="subtitle">Bioinformatician</span><br>
+                    <span class="subtitle">University of Colorado Boulder, USA</span>
+                  </h1>
+                </div>
+              </div>
+            </div>
+          </div>
+        </header>
+
+
+
+
+
         <div class="section" id="about">
           <div class="container">
             <div class="h4 text-center mb-4 title">About me</div>
