--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
             <div class="page-header-image" data-parallax="true"
-              style="background-image: url('images/montanhas-1.png width: 100%; min-height: 100%; background-size: 100% 100%;">
+              style="background-image: url('images/canions.jpg width: 100%; min-height: 100%; background-size: 100% 100%;">
             </div>
             <div class="container">
               <div class="content-center">
