--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div class="profile-page">
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
-            <div class="page-header-image" data-parallax="true" style="background-image: url('images/ren-ran-HG5QX-GXV5A-unsplash.jpg'); 
-              width: 100%; min-height: 100%; background-size: 100% 100%;">
+            <div class="page-header-image" data-parallax="true" style="background-image: url('images/rutger-heijmerikx-iQiFZ_MnzKo-unsplash.jpg'); 
+              width: 100%; min-height: 100%;">
             </div>
             <div class="container">
               <div class="content-center">
