--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
             <div class="page-header-image" data-parallax="true" style="background-image: url('images/johanser-martinez-sg1xilZMO2Y-unsplash.jpg'); 
-              width: 100%; min-height: 100%;">
+              width: 100%; min-height: 100%; background-size: 100% 100%;">
             </div>
             <div class="container">
               <div class="content-center">
