--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <div class="row">
                 <div class="col-lg-12 col-md-12" data-aos="fade-up" data-aos-offset="10">
                   <div class="card">
-
+<!--
                     <div class="card-horizontal">
                       <div class="about-me-card-img">
                         <img class="img-fluid about-me-card-img imagem-com-card" src="images/mata-atlantica.jpg"
@@ -160,7 +160,22 @@
                           studying more.
                         </p>
                       </div>
+                    </div>-->
+
+                      <div class="card-body">
+                        <p>I am mainly interested in using highly innovative tools and technologies in the study of
+                          biological diversity and evolutionary processes, focusing on the Plantae and Fungi kingdoms.
+                          My main passion today is using bioinformatics in the study of genomic and transcriptomic data,
+                          but I am also interested in developing new software for the investigation of biological
+                          systems.
+                          My excitement for science continues to grow everyday, and the possibility of developing new
+                          methods and
+                          analyses that can help the advancement of biology is what drives me towards working and
+                          studying more.
+                        </p>
+                      </div>
                     </div>
+
                   </div>
                 </div>
               </div>
