--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="profile-page sidebar-collapse">
       <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
         <div class="container">
-          <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Online CV</a>
+          <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Professional Website</a>
             <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
               aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span
@@ -40,7 +40,6 @@
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#publications">Publications</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#research_projects">Projects</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Photos</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -63,7 +62,7 @@
                 <p class="category text-white">Evolutionary Biologist | Bioinformatician</p>
                 <p class="category text-white">PhD Student at University of Campinas (Brazil)</p>
                 <p class="category text-white">Visiting Researcher at University of Colorado Boulder (USA)</p>
-                <!--<a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
+                <a class="btn btn-primary" href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
               </div>
             </div>
             <div class="section">
