--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p class="category text-white">Evolutionary Biologist | Bioinformatician</p>
                 <p class="category text-white">PhD Student at University of Campinas (Brazil)</p>
                 <p class="category text-white">Visiting Researcher at University of Colorado Boulder (USA)</p>
-                <a class="btn btn-primary" href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                <!--<a class="btn btn-primary" href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
               </div>
             </div>
             <div class="section">
