--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                           addition, I have skills with many programming languages and web/software development tools,
                           such as JavaScript, PHP, HTML, CSS.
                         </p>
+                        <p>
+                          <i class="fa fa-envelope" aria-hidden="true"></i> jsalvidemattos@gmail.com
+                        </p>
                       </div>
                     </div>
 
