--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                         <p>
                           <i class="fa fa-envelope" aria-hidden="true"></i> jsalvidemattos@gmail.com
                         </p>
+                        <p>
+                          <i class="fa fa-globe" aria-hidden="true"></i> Denver, Colorado/ USA
+                        </p>
                       </div>
                     </div>
 
