--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                           <i class="fa fa-globe" aria-hidden="true"></i> Denver, Colorado/ USA
                         </p>
                         <p>
-                          <i class="fa fa-file" aria-hidden="true"></i> <a ref="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf">Download my CV</a>
+                          <i class="fa fa-file" aria-hidden="true"></i> <a href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf">Download my CV</a>
                         </p>
                       </div>
                     </div>
