--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
                           analyses that can help the advancement of biology is what drives me towards working and
                           studying more.
                         </p>
+                        <p>
+                          <i class="fa-solid fa-seedling"></i> <a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">ResearchGate</a>
+                        </p>
+                        <p>
+                          <i class="fa fa-linkedin" aria-hidden="true"></i> <a href="https://www.linkedin.com/in/jacqueline-salvi-de-mattos-75b750a3/">LinkedIn</a>
+                        </p>
                       </div>
                     </div>
 
