--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                     rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github icon-style"></i></a>
                   <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/mattosjacq"
                     rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
+                  <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/jacqueline-salvi-de-mattos-75b750a3/"
+                    rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </div>
               </div>
             </div>
