--- a/index.html
+++ b/index.html
@@ -184,10 +184,7 @@
                           studying more.
                         </p>
                         <p>
-                          <i class="fa-solid fa-seedling"></i> <a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">ResearchGate</a>
-                        </p>
-                        <p>
-                          <i class="fa fa-linkedin" aria-hidden="true"></i> <a href="https://www.linkedin.com/in/jacqueline-salvi-de-mattos-75b750a3/">LinkedIn</a>
+                          <i class="fa-brands fa-researchgate" aria-hidden="true"></i><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">ResearchGate</a>
                         </p>
                       </div>
                     </div>
