--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                           studying more.
                         </p>
                         <p>
-                          <i class="fa-brands fa-researchgate" aria-hidden="true"></i><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">ResearchGate</a>
+                          <i class="fa-solid fa-microscope"></i><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">ResearchGate</a>
                         </p>
                       </div>
                     </div>
