--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="h2 title">Jacqueline Salvi de Mattos</div>
                 <p></p>
                 <p class="category text-white">Evolutionary Biologist | Bioinformatician</p>
-                <p class="category text-white">PhD Student at University of Campinas (Brazil)</p>
+                <p class="category text-white">PhD Candidate at University of Campinas (Brazil)</p>
                 <p class="category text-white">Visiting Researcher at University of Colorado Boulder (USA)</p>
                 <!--<a class="btn btn-primary" href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
               </div>
@@ -198,7 +198,7 @@
         </div>
 
 
-        <div class="section" id="skill">
+        <!--<div class="section" id="skill">
           <div class="container">
             <div class="h4 text-center mb-4 title">Professional Skills</div>
             <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -268,7 +268,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
 
         <div class="section" id="publications">
           <div class="container cc-education">
