--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           </div>
         </div>
 
-        <div class="section" id="research_projects">
+        <!--<div class="section" id="research_projects">
           <div class="container">
 
             <div class="h4 text-center mb-4 title">Research Projects</div>
@@ -390,6 +390,7 @@
             </div>
           </div>
         </div>
+        -->
 
         <div class="section" id="gallery">
           <div class="container">
