--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
             <div class="h4 text-center mb-4 title">Research Projects</div>
             <div class="row">
-              <!--<div class="col-md-12" style="display: inline-flex;">-->
+              <div class="col-md-12" style="display: inline-flex;">
               <div class="col-md-12">
                 <div class="col-md-3" style="display: inline;">
                   <div class="card" style="width: 100%; height: auto;">
