--- a/index.html
+++ b/index.html
@@ -324,6 +324,19 @@
                 </div>
               </div>
             </div>
+						<div class="h5 mb-4 title">2023</div>
+            <div class="card">
+              <div class="row">
+                <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">Journal of Biogeography</div>
+                    <p>The relative role of climate and biotic interactions in shaping the range limits of a neotropical orchid. 
+										Jacqueline Salvi de Mattos, Fabio Pinheiro, Bruno Garcia Luize, Cleber Juliano Neves Chaves, Thales Moreira de Lima, Clarisse Palma da Silva, Bárbara Simões Santos Leal. https://doi.org/10.1111/jbi.14629</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+						
           </div>
         </div>
 
