--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <!--<div class="page-header-image" data-parallax="true" style="background-image: url('images/rutger-heijmerikx-iQiFZ_MnzKo-unsplash.jpg'); 
               width: 100%; min-height: 100%; background-size: 100% 100%;">
             </div>-->
-	    <div class="page-header-image" data-parallax="true" style="background-image: 20230327122344_IMG_3400.JPG; 
+	    <div class="page-header-image" data-parallax="true" style="background-image: images/20230327122344_IMG_3400.JPG; 
               width: 100%; min-height: 100%; background-size: 100% 100%;">
             </div>
             <div class="container">
