--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#research">Research</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#publications">Publications</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#research_projects">Projects</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Photos</a></li>
             </ul>
           </div>
         </div>
@@ -57,7 +54,7 @@
             <div class="container">
               <div class="content-center">
                 <div class="cc-profile-image"><a href="#"><img src="images/profile-2022.jpeg" alt="Image" /></a></div>
-                <div class="h2 title">Jacqueline Salvi de Mattos</div>
+                <div class="h2 title">Jacqueline S. de Mattos Briganti</div>
                 <p></p>
                 <p class="category text-white">Evolutionary Biologist | Bioinformatician</p>
                 <p class="category text-white">PhD Candidate at University of Campinas (Brazil)</p>
@@ -178,10 +175,6 @@
                           My main passion today is using bioinformatics in the study of genomic and transcriptomic data,
                           but I am also interested in developing new software for the investigation of biological
                           systems.
-                          My excitement for science continues to grow everyday, and the possibility of developing new
-                          methods and
-                          analyses that can help the advancement of biology is what drives me towards working and
-                          studying more.
                         </p>
                         <p>
                           <i class="fa-solid fa-books" aria-hidden="true"></i> <a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">ResearchGate</a>
