--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="container">
               <div class="content-center">
-                <div class="cc-profile-image"><a href="#"><img src="images/profile-2022.jpeg" alt="Image" /></a></div>
+                <div class="cc-profile-image"><a href="#"><img src="images/redrocks2.jpg" alt="Image" /></a></div>
                 <div class="h2 title">Jacqueline Salvi de Mattos</div>
                 <p></p>
                 <p class="category text-white">Evolutionary Biologist | Bioinformatician</p>
