--- a/index.html
+++ b/index.html
@@ -109,17 +109,13 @@
                     </div>-->
 
                       <div class="card-body">
-                        <p>I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year
-                          abroad studying at the University of Liverpool (UK).
-                          At the moment I am pursuing my PhD degree, having my research focused on genomics and
-                          bioinformatics for an evolutionary biology approach. For research purposes, I have had
-                          training in both R and Python, and I am also skilled in Linux command line, bash scripting,
-                          SQL, High Performance Computing (HPC), GitHub and Git
-                          version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS
-                          data. I have experience with
-                          de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In
-                          addition, I have skills with many programming languages and web/software development tools,
-                          such as JavaScript, PHP, HTML, CSS.
+                        <p>I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
+                          Currently, I am undertaking my PhD degree at University of Campinas (Brazil) and also collaborating at University of Colorado Boulder, at the Kane Lab.
+                          My research is focusing on the evolutionary mechanisms of natural populations of a neotropical orchid species, and for that I'm using mainly genomics and bioinformatics.
+                          As an academic, I have had training in R, Python, Linux command line, Bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
+                          version control. I have good skills in de-novo genome assembly and in many genomic/bioinformatic frameworks and tools for analyses of NGS data. In
+                          addition, I have skills with many programming languages and web/software development tools, such as JavaScript, PHP, and Html.
+                          
                         </p>
                         <p>
                           <i class="fa fa-envelope" aria-hidden="true"></i> jsalvidemattos@gmail.com
@@ -127,9 +123,9 @@
                         <p>
                           <i class="fa fa-globe" aria-hidden="true"></i> Denver, Colorado/ USA
                         </p>
-                        <p>
+                        <!--<p>
                           <i class="fa fa-file" aria-hidden="true"></i> <a href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf">Download my CV</a>
-                        </p>
+                        </p>-->
                       </div>
                     </div>
 
