--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                           As an academic, I have had training in R, Python, Linux command line, Bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
                           version control. I have good skills in de-novo genome assembly and in many genomic/bioinformatic frameworks and tools for analyses of NGS data. In
                           addition, I have skills with many programming languages and web/software development tools, such as JavaScript, PHP, and Html.
-                          
+
                         </p>
                         <p>
                           <i class="fa fa-envelope" aria-hidden="true"></i> jsalvidemattos@gmail.com
@@ -263,7 +263,7 @@
           <div class="container cc-education">
             <div class="h4 text-center mb-4 title">Publications</div>
 
-            <div class="h5 mb-4 title">2017</div>
+            <!--<div class="h5 mb-4 title">2017</div>-->
             <div class="card">
               <div class="row">
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -284,7 +284,7 @@
                 </div>
               </div>
             </div>
-            <div class="h5 mb-4 title">2019</div>
+            <!--<div class="h5 mb-4 title">2019</div>-->
             <div class="card">
               <div class="row">
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -299,7 +299,7 @@
                 </div>
               </div>
             </div>
-            <div class="h5 mb-4 title">2021</div>
+            <!--<div class="h5 mb-4 title">2021</div>-->
             <div class="card">
               <div class="row">
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -313,7 +313,7 @@
                 </div>
               </div>
             </div>
-						<div class="h5 mb-4 title">2023</div>
+						<!--<div class="h5 mb-4 title">2023</div>-->
             <div class="card">
               <div class="row">
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -325,7 +325,19 @@
                 </div>
               </div>
             </div>
-						
+						<div class="card">
+              <div class="row">
+                <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">Journal of Mountain Science</div>
+                    <p>Shared-role of vegetation types, elevation and soil affecting plant diversity in an old-tropical mountain hotspot.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
           </div>
         </div>
 
