--- a/index.html
+++ b/index.html
@@ -276,9 +276,8 @@
                       SCHWEIGER,
                       ANDREAS H.;
                       OWEN-SMITH, NORMAN ; JOHNSON, CHRISTOPHER N.; MARQUIS, ROBERT J.;SVENNING, JENS-CHRISTIAN.
-                      2018.Ecological
-                      and
-                      evolutionary legacy of megafauna extinctions. Biological Reviews, vol. 93, issue 2. DOI:
+                      2018.
+                      <a href="HTTPS://DOI.ORG/10.1111/BRV.12374">Ecological and evolutionary legacy of megafauna extinctions.</a> Biological Reviews, vol. 93, issue 2. DOI:
                       HTTPS://DOI.ORG/10.1111/BRV.12374</p>
                   </div>
                 </div>
